# heir

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-search-and-replace.yaml  404.html  AGENTS.md  BUILD  BUILD.bazel  BUILD_AND_DEPLOY.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  bazel-heir-private  bazel-rotom-rolls-phase1  benchmark.py  debug.txt  dialects.dot  dump_pkl.go  fc_cggi.mlir  fuzztest.bazelrc  go.mod  go.sum  heracles_integration.md  hw_no_yosys.mlir  hws_no_vec.rs  hws_no_yosys.mlir  hws_rust.mlir  hws_rust.rs  hws_secret_ny.mlir  index.html  index.xml  (+29 more)
bazel/: BUILD  BUILD.bazel  extensions.bzl  glob_lit_test.bzl  import_llvm.bzl  libtorch.BUILD  lit.bzl  llvm.patch  setup_llvm.bzl  yosys.BUILD  zlib-ng.BUILD
bazel/cheddar/: cheddar.BUILD  config.bzl
bazel/jaxite/: BUILD  jaxite.BUILD
bazel/openfhe/: BUILD  add_config_core.patch  cereal.BUILD  copts.bzl  openfhe.BUILD  rapidjson.BUILD
bazel/pocketfft/: BUILD  pocketfft.BUILD
frontend/: BUILD  README.md  cast_test.py  cc_toolchain_runtime.bzl  cggi_test.py  cibuildwheel.py  conditional_test.py  e2e_test.py  example.py  import_isolation_test.py  loop_test.py  mixed_bitwidth_test.py  pyproject.toml  requirements.txt  sbox_test.py  tensor_loop_test.py  tensor_test.py  testing.bzl  type_test.py  unique_name_test.py
frontend/heir/: __init__.py  _extras.py  core.py  entrypoints.py  interfaces.py  mlir_emitter.py  numba_nbep1_reverter.py  pipeline.py
frontend/heir/backend/: pybind_helpers.py
frontend/heir/backends/: cleartext.py  dummy.py
frontend/heir/core/: decorator.py  heir_cli.py  heir_cli_config.py  pipeline.py
frontend/heir/heir_cli/: heir_cli.py  heir_cli_config.py
frontend/heir/mlir/: linalg.py  mlir_decorator.py  types.py
frontend/heir/numba_nbep1_reverter/: builtins.py  old_builtins.py  typeof.py
lib/Analysis/: BUILD  CMakeLists.txt  Utils.h
lib/Analysis/AddAndKeySwitchCountAnalysis/: AddAndKeySwitchCountAnalysis.cpp  AddAndKeySwitchCountAnalysis.h  BUILD
lib/Analysis/CKKSRangeAnalysis/: BUILD  CKKSRangeAnalysis.cpp  CKKSRangeAnalysis.h
lib/Analysis/CausalCostModel/: BUILD  CausalCostModel.cpp  CausalCostModel.h  CausalGraph.cpp  CausalGraph.h  CostModel.cpp  CostModel.h
lib/Analysis/Cpp/: BUILD  ConstQualifierAnalysis.cpp  ConstQualifierAnalysis.h
lib/Analysis/DimensionAnalysis/: BUILD  DimensionAnalysis.cpp  DimensionAnalysis.h
lib/Analysis/ILPBootstrapPlacementAnalysis/: BUILD  ILPBootstrapPlacementAnalysis.cpp  ILPBootstrapPlacementAnalysis.h  OpGrouping.cpp  OpGrouping.h
lib/Analysis/LayoutFoldingAnalysis/: BUILD  LayoutFoldingAnalysis.cpp  LayoutFoldingAnalysis.h
lib/Analysis/LazyRelinAnalysis/: BUILD  LazyRelinAnalysis.cpp  LazyRelinAnalysis.h
lib/Analysis/LevelAnalysis/: BUILD  BootstrapWaterlineAnalysis.cpp  BootstrapWaterlineAnalysis.h  LevelAnalysis.cpp  LevelAnalysis.h
lib/Analysis/MulDepthAnalysis/: BUILD  CMakeLists.txt  MulDepthAnalysis.cpp  MulDepthAnalysis.h
lib/Analysis/MulResultAnalysis/: BUILD  MulResultAnalysis.cpp  MulResultAnalysis.h
lib/Analysis/NoiseAnalysis/: BUILD  Noise.cpp  Noise.h  NoiseAnalysis.cpp  NoiseAnalysis.h  NoiseWithDegree.cpp  NoiseWithDegree.h  Params.cpp  Params.h  README.md  Symbolic.cpp  Symbolic.h
lib/Analysis/NoisePropagation/: BUILD  NoisePropagationAnalysis.cpp  Variance.cpp
lib/Analysis/OptimizeRelinearizationAnalysis/: BUILD  CMakeLists.txt  OptimizeRelinearizationAnalysis.cpp  OptimizeRelinearizationAnalysis.h
lib/Analysis/PartialReductionRotateAnalysis/: BUILD  PartialReductionRotateAnalysis.cpp  PartialReductionRotateAnalysis.h
lib/Analysis/PreprocessingAnalysis/: BUILD  PreprocessingAnalysis.cpp  PreprocessingAnalysis.h
lib/Analysis/PreprocessingStorageLayoutAnalysis/: BUILD  PreprocessingStorageLayoutAnalysis.cpp  PreprocessingStorageLayoutAnalysis.h
lib/Analysis/RangeAnalysis/: BUILD  RangeAnalysis.cpp  RangeAnalysis.h
lib/Analysis/RotationAnalysis/: BUILD  CMakeLists.txt  DagBuilder.cpp  DagBuilder.h  RotationAnalysis.cpp  RotationAnalysis.h  RotationEvalVisitor.cpp  RotationEvalVisitor.h  RotationEvalVisitorTest.cpp
lib/Analysis/ScaleAnalysis/: BUILD  ScaleAnalysis.cpp  ScaleAnalysis.h
lib/Analysis/SchemeInfoAnalysis/: BUILD  SchemeInfoAnalysis.cpp  SchemeInfoAnalysis.h
lib/Analysis/SchemeSelectionAnalysis/: BUILD  SchemeSelectionAnalysis.cpp  SchemeSelectionAnalysis.h
lib/Conversion/: BUILD  CMakeLists.txt  Utils.cpp  Utils.h
lib/Dialect/: BUILD  CMakeLists.txt  FHEHelpers.h  FuncUtils.cpp  FuncUtils.h  HEIRInterfaces.cpp  HEIRInterfaces.h  HEIRInterfaces.td  ModuleAttributes.cpp  ModuleAttributes.h  Utils.h  dialect.bzl
lib/Dialect/BYC/: BUILD.bazel  (+1 more)
lib/Transforms/: BUILD  CMakeLists.txt  transforms.bzl
lib/Utils/: APIntUtils.cpp  APIntUtils.h  APIntUtilsBenchmark.cpp  APIntUtilsTest.cpp  AffineMapUtils.cpp  AffineMapUtils.h  AllocToInPlaceUtils.cpp  AllocToInPlaceUtils.h  ArithmeticDag.h  ArithmeticDagTest.cpp  AttributeUtils.cpp  AttributeUtils.h  BUILD  CMakeLists.txt  ContextAwareConversionUtils.cpp  ContextAwareConversionUtils.h  ContextAwareDialectConversion.cpp  ContextAwareDialectConversion.h  ContextAwareTypeConversion.cpp  ContextAwareTypeConversion.h  ConversionUtils.cpp  ConversionUtils.h  LogArithmetic.cpp  LogArithmetic.h  LogArithmeticTest.cpp  MathUtils.cpp  MathUtils.h  MathUtilsTest.cpp  OpAsmInterfaceHelper.cpp  OpAsmInterfaceHelper.h  RotationUtils.h  RotationUtilsTest.cpp  TargetUtils.cpp  TargetUtils.h  TensorUtils.cpp  TensorUtils.h  TransformUtils.cpp  TransformUtils.h  Utils.cpp  Utils.h  (+1 more)
scripts/jupyter/: BUILD  Demo.ipynb  HEIR Play.ipynb  README.md  pyproject.toml  requirements.txt
tests/llvm_runner/: BUILD  BUILD.bazel  llvm_runner.bzl  memrefCopy.cpp  memref_types.h
tools/: BUILD  CMakeLists.txt  heir-cheddar.bzl  heir-jaxite.bzl  heir-lsp.cpp  heir-openfhe-binfhe.bzl  heir-openfhe.bzl  heir-opt-wrapper.sh  heir-opt.bzl  heir-opt.cpp  heir-tfhe-rs.bzl  heir-translate.bzl  heir-translate.cpp  llc.bzl  mlir-translate.bzl
(+4640 files in other folders)
